--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "oauth2orize-koa",
-  "version": "1.3.2",
+  "name": "oauth2orize-koa-v1",
+  "version": "1.0.0",
   "description": "OAuth 2.0 authorization server toolkit for Node.js.",
   "keywords": [
     "oauth",
@@ -13,15 +13,15 @@
     "koa"
   ],
   "author": {
-    "name": "James Sharp",
-    "email": "james@ortootech.com"
+    "name": "Mahsa Mohammadkhani",
+    "email": "mahsa@mother.co"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ortoo/oauth2orize.git"
+    "url": "git://github.com/mother/oauth2orize.git"
   },
   "bugs": {
-    "url": "http://github.com/ortoo/oauth2orize/issues"
+    "url": "http://github.com/mother/oauth2orize/issues"
   },
   "licenses": [
     {
@@ -33,6 +33,7 @@
   "dependencies": {
     "debug": "2.x.x",
     "koa-compose": "^3.0.0",
+    "koa-convert": "1.2.0",
     "uid2": "0.0.x",
     "utils-merge": "1.x.x"
   },
